- [NEW] - Online Map - IBP station double-click tunes freq and switch Rig mode
- [NEW] - Main Window - Current profile name is shown (issue #282)
- [NEW] - Import - Details can be saved to file (issue #284)
- [NEW] - Added Simplified Chinese translation (PR #285 thank BG7JAF)
- [NEW] - New Contact - Enter saves QSO if QSO time is running (issue #293 - partial)
- [NEW] - RIG Widget - RIT/XIT are displayed with user-friendly units (issue #294)
- Fixed ADI Import is too slow (issue #270)
- Improved Import/Export Performance
- Fixed Missing Satellite Mode SX (issue #291)
- Fixed QSO Detail - Issue when Sat-Name field was always disabled
- Fixed RPM build - Installed (but unpackaged) metainfo file issue

2023/12/01 - 0.30.0
- [NEW] - QSL Images are stored in the database
- [NEW] - Added AppStream Metainfo File (PR #262 thanks AsciiWolf)
- [NEW] - Added (WPX) prefix (issue #263)
- [NEW] - Added WPX Award statistics
- [NEW] - Added support for external translation files(issue #275)
- [CHANGED] - Removed QSOID from Export dialog column setting (issue #258)
- Fixed Date editor does not support NULL value in Logbook Direct Editor (issue #256)
- Fixed duplicate entry in Windows Add or Remove - only Window platform (issue #260)
- Fixed RST fields revert to 59 after changing them (issue #261)
- Fixed Cannot change TQSL Path in Settings - flatpak (issue #271)

2023/11/13 - 0.29.2
- Fixed QLog is already running error popup on MacOS (issue #257 thanks rjesson)

2023/11/10 - 0.29.1
- Fixed QSL cards tooltip are not displayed under qt6.5 (issue #248)
- Fixed Distance unit is not displayed in QSO Info under Windows (issue #250)
- Fixed Editing STATION_CALLSIGN can cause unwanted change in QSO Detail (issue #251)
- Fixed QSO Detail Operator Name containes an incorrect value (issue #252)
- Fixed Calls with VE, VA are coding as Amsterdam & St Paul Islands instead of Canada (issue #253)
- Fixed LoTW QSL import reports unmatched QSOs sometime (issue #254)

2023/10/20 - 0.29.0