@@ -113,6 +113,9 @@
          </item>
          <item row="0" column="0">
           <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <property name="spacing">
+            <number>4</number>
+           </property>
            <item>
             <widget class="QLabel" name="callsignLabel">
              <property name="sizePolicy">
@@ -123,6 +126,19 @@
              </property>
              <property name="text">
               <string>Callsign</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="callbookStatusLabel">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string/>
              </property>
             </widget>
            </item>
