@@ -15,6 +15,7 @@ TBC - 0.31.0
 - [NEW] - Import - Details can be saved to file (issue #284)
 - [NEW] - Added Simplified Chinese translation (PR #285 thank BG7JAF)
 - [NEW] - New Contact - Enter saves QSO if QSO time is running (issue #293 - partial)
+- [NEW] - New Contact - Callsign Enter event saves QSO if no Callbook is active - Pileup Mode (issue #293)
 - [NEW] - RIG Widget - RIT/XIT are displayed with user-friendly units (issue #294)
 - Fixed ADI Import is too slow (issue #270)
 - Improved Import/Export Performance
